--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "RevNavegacao",
-    "slug": "RevNavegacao",
+    "name": "App 3o Info 2023",
+    "slug": "2023-app-3info",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
